--- a/react-app/src/components/components.css
+++ b/react-app/src/components/components.css
@@ -9,3 +9,21 @@
     align-items: center;
 }
 
+/*The home section background img set up*/
+.background-img{
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../images/bg.jpg");
+    background-size: cover;
+    background-position: top;
+}
+
+
+
+/* Media query for screens 992px and wider */
+@media (min-width: 992px) {
+    .background-img {
+        background-position: bottom center;
+        background-image: url("../images/bg1.jpg");
+    }
+}
