--- a/react-app/src/components/components.css
+++ b/react-app/src/components/components.css
@@ -13,17 +13,46 @@
 .background-img{
     height: 100vh;
     width: 100vw;
-    background-image: url("../images/bg.jpg");
+    background-image: url("../images/bg1.jpg");
     background-size: cover;
     background-position: top;
+    display: flex;
+    flex-direction: column; /* Stacks children vertically */
+    justify-content: center; /* Centers content vertically */
+    align-items: center;     /* Centers content horizontally */
+    text-align: center;      /* Centers text within each flex item */
+}
+/*Home section text css*/
+.background-img h1{
+    font-size: 10.5vw;
+    margin-top: 5.5vh;
+}
+.background-img p, .background-img span{
+    font-size: 4.5vw;
+}
+
+.text-container{
+    display: flex;
+    flex-direction: row;
 }
 
 
 
 /* Media query for screens 992px and wider */
 @media (min-width: 992px) {
+    /*Home Section CSS*/
     .background-img {
-        background-position: bottom center;
-        background-image: url("../images/bg1.jpg");
+        justify-content: flex-end;
+        
     }
+    
+    .background-img h1{
+        font-size: 5.5vw;
+    }
+
+    .background-img p, .background-img span{
+        font-size: 2.5vw;
+        margin-bottom: 9.5vh;
+    }
+    
 }
