--- a/react-app/src/components/components.css
+++ b/react-app/src/components/components.css
@@ -11,8 +11,8 @@
 
 /*The home section background img set up*/
 .background-img{
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100%;
     background-image: url("../images/bg1.jpg");
     background-size: cover;
     background-position: top;
@@ -24,16 +24,57 @@
 }
 /*Home section text css*/
 .background-img h1{
-    font-size: 10.5vw;
-    margin-top: 5.5vh;
+    font-size: 10.5dvw;
+    margin-top: 5.5dvh;
 }
 .background-img p, .background-img span{
-    font-size: 4.5vw;
+    font-size: 4.5dvw;
 }
-
 .text-container{
     display: flex;
     flex-direction: row;
+}
+/*About me section*/
+.about-me{
+    margin: 10dvh 3dvw 3dvh 3dvw;
+    padding: 3dvh 3dvw 3dvh 3dvw;
+    background-color: #f2f2f2;
+}
+.img-thumbnail{
+    background-color: transparent !important;
+}
+.profile{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.profile div{
+    width: 100%;
+    align-content: center;
+}
+.skill {
+    display: flex;
+    align-items: center; /* Aligns items vertically in the center */
+    gap: 10px; /* Adds space between the icon, text/progress bar */
+    width: 100%;
+    margin-top: 10px;
+}
+.textAndBar {
+    display: flex;
+    flex-direction: column; /*Stacks children vertically*/ 
+    align-items: flex-start; /*Aligns children to the start of the flex container*/ 
+    gap: 5px; /*Adds space between items*/ 
+    width: 100%;
+}
+.skill p {
+    margin: 0; /* Removes default margin to align text properly */
+    white-space: nowrap; /* Keeps the label on the same line */
+    flex-shrink: 0; /* Prevents the label from shrinking */
+}
+.progress {
+    flex-grow: 1; /* Allows the progress bar to take up the remaining space */
+    height: 20px; /* Sets a fixed height for the progress bars */
+    width: 100%;
 }
 
 
@@ -45,14 +86,29 @@
         justify-content: flex-end;
         
     }
-    
     .background-img h1{
-        font-size: 5.5vw;
+        font-size: 5.5dvw;
     }
-
     .background-img p, .background-img span{
-        font-size: 2.5vw;
-        margin-bottom: 9.5vh;
+        font-size: 2.5dvw;
+        margin-bottom: 9.5dvh;
+    }
+    /*About me section*/
+    .about-me{
+        display: flex;
+        flex-direction: row;
+        gap: 300px;
     }
     
+    .profileAndParagraph, .skills {
+        flex: 1;  /*This ensures each section takes up half of the available space*/ 
+    }
+}
+
+/* Media query for screens 991px and smaller(width) */
+@media (max-width: 991px) {
+    /*About me section small screens*/
+    .paragraph{
+        margin-top: 2dvh;
+    }
 }
