Added footer and contact component

--- a/react-app/src/components/components.css
+++ b/react-app/src/components/components.css
@@ -36,8 +36,8 @@
 }
 /*About me section*/
 .about-me{
-    margin: 10dvh 3dvw 3dvh 3dvw;
-    padding: 3dvh 3dvw 3dvh 3dvw;
+    margin: 15dvh 3dvw 3dvh 3dvw;
+    padding: 4rem;
     background-color: #f2f2f2;
 }
 .img-thumbnail{
@@ -65,7 +65,7 @@
     left: 0; /* Starts from the left edge of the h3 */
     bottom: 0; /* Aligns to the bottom of the h3 */
     width: 50%; /* Set this to control the width of the underline */
-    height: 2px; /* Thickness of the underline */
+    height: 3px; /* Thickness of the underline */
     background-color: #0D6EFD; /* Color of the underline */
 }
 .skill {
@@ -95,18 +95,127 @@
 }
 
 /*Projects section*/
-.projectHolder{
-    background-color: #f2f2f2;
+#projects{
+    margin-top: 5rem;
 }
 .projects{
+    justify-content: center;
+    padding: 10px;
+    gap: 45px;
+}
+#projects h1{
+    text-align: center;
+    font-size: 48px;
+    font-weight: bold;
+}
+.project{
+    padding: 10px;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); /* Add initial shadow */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition for transform and shadow */
+}
+.project:hover {
+    transform: translateY(-10px); /* Slightly lift the card */
+    box-shadow: 0 16px 32px rgba(0, 0, 0, 0.6); /* Increase shadow on hover */
+}
+.card-body{
+    padding: 0px 16px 16px 16px;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card-body a{
     width: 100%;
 }
+.fa-hospital{
+    color: #007bff;
+}
+.fa-money-bill-trend-up{
+    color: #28a745;
+}
+.fa-computer{
+    color: #6c757d;
+}
+.fa-vector-square{
+    color: #6f42c1;
+}
+.fa-cloud{
+    color: #e36209;
+}
+/*Setting the Text inside the cloud icon*/
+.icon-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.icon-container .fa-icon {
+    font-size: 55px;
+}
 
-.project{}
+.icon-container.dijiKeyAPI::after {
+    content: 'API';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 16px; 
+    font-weight: bold;
+    color: white; 
+    text-align: center;
+    pointer-events: none;
+}
+/*Fading in the projects*/
+.fade-in{
+    opacity: 0;
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+.fade-in.visible{
+    animation: fadeIn 1s forwards;
+}
 
+/*Resume Section*/
+#resume{
+    margin: 20rem;   
+}
+
+/*Contact section*/
+#contact{
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+.contact{
+    padding: 3rem;
+    background-color: #f2f2f2;
+}
+.contact h2{
+    position: relative;
+    display: inline-block;
+    margin-bottom: 1rem;
+}
+.contact h2::after{
+    content: ''; /* Necessary for the pseudo-element to appear */
+    position: absolute; /* Positions relative to the h3 */
+    left: 0; /* Starts from the left edge of the h3 */
+    bottom: 0; /* Aligns to the bottom of the h3 */
+    width: 50%; /* Set this to control the width of the underline */
+    height: 3px; /* Thickness of the underline */
+    background-color: #0D6EFD; /* Color of the underline */
+}
+.connectMe p{
+    font-size: 18px;
+}
+.formBox{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+/*Footer section*/
+.fa-square-github:hover{
+    color: #6f42c1 !important;
+}
 
 
 /* Media query for screens 992px and wider */
@@ -132,16 +241,34 @@
     .profileAndParagraph, .skills {
         flex: 1;  /*This ensures each section takes up half of the available space*/ 
     }
+
+    /*Contact section*/
+    .contact {
+        display: flex;
+        flex-direction: row;
+        gap: 10rem;
+    }
+    .connectMe, .messageMe{
+        flex: 1;
+    }
 }
 
 /* Media query for screens 991px and smaller(width) */
 @media (max-width: 991px) {
-    
+   .connectMe{
+    margin-top: 3rem;
+   } 
 }
 
 
 /*Animations*/
-@keyframes projects-fade-in {
-    from {opacity: 0;}
-    to {opacity: 1;}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
